--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="list"><a href="CSS pt.6 pseudoclass.html">CSS часть 6. Псевдоклассы.</a></li>
                     <li class="list"><a href="CSS pt.7 pseudoelements.html">CSS часть 7. Псевдоэлементы.</a></li>
                     <li class="list"><a href="CSS pt.8 position.html">CSS часть 8. Позиционирование.</a></li>
-                    <li class="list"><a href="../figma design 1/index.html">figma</a></li>
+                    <li class="list"><a href="/figma design 1/index.html">figma</a></li>
                 </ul>
             </nav>
     </body>
